[package]
name = "moite_moite"
version = "0.2.0" # don't forget to update documentation link on bump
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
description = "Split a value in two owned parts"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nox/moite_moite"
documentation = "https://docs.rs/moite_moite/0.2.0/"
readme = "README.md"
categories = ["concurrency", "data-structures"]
keywords = ["arc", "split", "atomic", "thread"]

[lib]
test = false
